--- a/AnimalHospital/css/style.scss
+++ b/AnimalHospital/css/style.scss
@@ -182,7 +182,7 @@ header {
 #about {
   #about-heading {
     padding-top: 44px;
-    padding-bottom: 50px;
+    padding-bottom: 42px;
     h1 {
       font-size: 2.5rem;
       text-align: center;
@@ -203,8 +203,8 @@ header {
       }
       svg {
         position: absolute;
-        right: 0;
-        bottom: 0;
+        right: 24px;
+        bottom: 11px;
       }
     }
     @include mq(lg) {
@@ -224,9 +224,12 @@ header {
     }
   }
   #about-contents {
-    padding-bottom: 50px;
+    padding-top: 50px;
+    padding-bottom: 42px;
     .content {
-      margin-top: 50px;
+      &:not(:first-of-type) {
+        margin-top: 43px;
+      }
       @include mq(lg) {
         display: flex;
         justify-content: space-between;
@@ -252,7 +255,7 @@ header {
         }
         h2 {
           text-align: center;
-          margin-top: 30px;
+          margin-top: 26px;
           font-size: 2rem;
           font-weight: bold;
           @include mq(lg) {
@@ -270,8 +273,9 @@ header {
           }
         }
         p {
-          margin-top: 20px;
+          margin-top: 7px;
           font-size: 1.6rem;
+          line-height: 1.875;
           @include mq(lg) {
             font-size: 1.8rem;
             line-height: 1.8;
@@ -328,14 +332,15 @@ header {
   justify-content: center;
   align-items: center;
   column-gap: 20px;
-  padding: 50px 0;
-  h1 {
+  padding-top: 45px;
+  padding-bottom: 44px;
+  span {
     text-align: center;
     font-size: 2.5rem;
   }
 }
 #service {
-  padding-bottom: 50px;
+  padding-bottom: 44px;
   #service-contents {
     @include mq(lg) {
       display: flex;
@@ -343,6 +348,9 @@ header {
     }
     .service-content {
       text-align: center;
+      &:not(:first-of-type) {
+        margin-top: 43px;
+      }
       @include mq(lg) {
         width: 260px;
       }
@@ -400,14 +408,15 @@ header {
       }
       h2 {
         font-size: 2rem;
-        margin-top: 30px;
+        margin-top: 24px;
         @include mq(md) {
           margin-top: 20px;
         }
       }
       p {
         font-size: 1.6rem;
-        margin-top: 20px;
+        margin-top: 8px;
+        line-height: 1.875;
         @include mq(md) {
           margin-top: 15px;
         }
@@ -427,9 +436,12 @@ header {
           border-color: #707070;
           border-style: solid;
           border-width: 1px 0;
-          padding: 30px 0 30.4px;
+          padding-top: 30px;
+          padding-bottom: 34px;
           td {
             display: block;
+            line-height: 1.47;
+            padding: 0 10px;
             @include mq(lg) {
               display: inline-block;
               padding: 20px 0;
@@ -437,7 +449,7 @@ header {
             &:nth-child(1) {
               font-weight: bold;
               font-size: 1.7rem;
-              margin-top: 30px;
+              margin-top: 25px;
               @include mq(lg) {
                 margin-top: 0;
               }
@@ -446,6 +458,7 @@ header {
               font-weight: bold;
               font-size: 2rem;
               color: #0d96a0;
+              line-height: 1.55;
               @include mq(lg) {
                 margin-left: 29px;
                 width: 180px;
@@ -453,7 +466,8 @@ header {
             }
             &:nth-child(3) {
               font-size: 1.6rem;
-              margin-bottom: 30.4px;
+              margin-bottom: 24.9px;
+              line-height: 1.775;
               @include mq(lg) {
                 margin-left: 29px;
                 margin-bottom: 0;
@@ -467,7 +481,7 @@ header {
   }
 }
 #access {
-  padding-bottom: 50px;
+  padding-bottom: 48px;
   .access-contents {
     @include mq(lg) {
       display: flex;
@@ -476,7 +490,7 @@ header {
     .access-map {
       padding-top: 56.25%;
       position: relative;
-      height: 222px;
+      height: 221px;
       @include mq(lg) {
         width: 440px;
         height: 300px;
@@ -491,23 +505,21 @@ header {
       }
     }
     .access-text {
-      margin-top: 50px;
+      margin-top: 23px;
       h2 {
         font-size: 2.2rem;
       }
       p {
         font-size: 1.6rem;
-        margin-top: 20px;
+        margin-top: 10px;
         span {
           font-size: 2.5rem;
           color: #0d96a0;
+          letter-spacing: 0.4px;
         }
       }
-      .opening {
-        margin-top: 20px;
-        border-top: 1px #505050 solid;
-        border-bottom: 1px #505050 solid;
-        padding-bottom: 22px;
+      hr {
+        margin-top: 17px;
       }
     }
   }
@@ -520,13 +532,16 @@ header {
   p {
     font-size: 1.6rem;
     line-height: 1.875;
+    margin-top: -8px;
+    margin-right: 10px;
     @include mq(lg) {
       text-align: center;
       font-size: 1.7rem;
     }
   }
   form {
-    margin-top: 50px;
+    margin-top: 39px;
+    margin-right: 10px;
     .form-control {
       @include mq(lg) {
         display: flex;
@@ -538,7 +553,7 @@ header {
         }
       }
       &:not(:first-of-type) {
-        margin-top: 22px;
+        margin-top: 18px;
       }
       label {
         font-size: 1.8rem;
@@ -546,18 +561,20 @@ header {
         display: block;
       }
       input {
+        margin-top: 7px;
         background-color: #ffffff;
         width: 100%;
         height: 50px;
         font-size: 1.8rem;
         padding: 0.5rem 1rem;
         &[type='button'] {
-          margin-top: 50px;
+          margin-top: 29px;
           background-color: #0d96a0;
           color: white;
           font-size: 2rem;
           font-weight: bold;
           border-radius: 10px;
+          height: 40px;
         }
         @include mq(lg) {
           width: 711px;
@@ -567,6 +584,7 @@ header {
         }
       }
       textarea {
+        margin-top: 7px;
         background-color: #ffffff;
         width: 100%;
         height: 300px;
@@ -582,13 +600,15 @@ header {
 footer {
   background-color: #505050;
   height: 279px;
-  padding: 50px 0;
+  padding-top: 45px;
+  padding-bottom: 50px;
   nav {
     border-bottom: 1px #ffffff solid;
-    padding-bottom: 31px;
+    padding-bottom: 26px;
     .nav-list {
       display: flex;
       column-gap: 20px;
+      row-gap: 6px;
       flex-wrap: wrap;
       justify-content: center;
       li {
@@ -612,7 +632,7 @@ footer {
     color: #fff;
     font-size: 1.6rem;
     text-align: center;
-    margin-top: 20px;
+    margin-top: 16px;
     font-weight: bold;
     @include mq(lg) {
       font-size: 2rem;
