--- a/TheLittleCafe/css/style.css
+++ b/TheLittleCafe/css/style.css
@@ -78,6 +78,12 @@ h1::before {
   margin: 0 auto;
 }
 
+@media screen and (max-width: 1000px) {
+  .wrapper {
+    padding: 0 10%;
+  }
+}
+
 .header-wrapper {
   padding: 0 65px 0 60px;
 }
@@ -199,7 +205,7 @@ header nav ul li:not(:last-of-type) {
   padding-bottom: 53px;
 }
 
-@media screen and (max-width: 1079px) {
+@media screen and (max-width: 1000px) {
   #menu .menu-contents {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -216,7 +222,7 @@ header nav ul li:not(:last-of-type) {
   width: 300px;
 }
 
-@media screen and (max-width: 1079px) {
+@media screen and (max-width: 1000px) {
   #menu .menu-contents .menu-item {
     width: 100%;
   }
@@ -311,7 +317,7 @@ footer p {
   font-size: 20px;
 }
 
-@media screen and (max-width: 1079px) {
+@media screen and (max-width: 1000px) {
   .pc {
     display: block;
   }
