--- a/TheLittleCafe/css/style.css
+++ b/TheLittleCafe/css/style.css
@@ -78,7 +78,19 @@ h1::before {
   margin: 0 auto;
 }
 
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 960px) {
+  .wrapper {
+    padding: 0 20%;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .wrapper {
+    padding: 0 15%;
+  }
+}
+
+@media screen and (max-width: 760px) {
   .wrapper {
     padding: 0 10%;
   }
@@ -92,6 +104,12 @@ h1::before {
   padding: 0 60px;
   max-width: 1079px;
   margin: 0 auto;
+}
+
+@media screen and (max-width: 960px) {
+  .contents-wrapper {
+    padding: 0 5%;
+  }
 }
 
 .btn {
@@ -205,7 +223,7 @@ header nav ul li:not(:last-of-type) {
   padding-bottom: 53px;
 }
 
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 960px) {
   #menu .menu-contents {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -222,7 +240,7 @@ header nav ul li:not(:last-of-type) {
   width: 300px;
 }
 
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 960px) {
   #menu .menu-contents .menu-item {
     width: 100%;
   }
@@ -317,7 +335,7 @@ footer p {
   font-size: 20px;
 }
 
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 960px) {
   .pc {
     display: block;
   }
