--- a/TheLittleCafe/css/style.scss
+++ b/TheLittleCafe/css/style.scss
@@ -64,7 +64,13 @@ h1 {
 .wrapper {
   padding: 0 60px;
   margin: 0 auto;
-  @media screen and (max-width: 1000px) {
+  @media screen and (max-width: 960px) {
+    padding: 0 20%;
+  }
+  @media screen and (max-width: 800px) {
+    padding: 0 15%;
+  }
+  @media screen and (max-width: 760px) {
     padding: 0 10%;
   }
 }
@@ -75,6 +81,9 @@ h1 {
   padding: 0 60px;
   max-width: 1079px;
   margin: 0 auto;
+  @media screen and(max-width:960px) {
+    padding: 0 5%;
+  }
 }
 .btn {
   width: 250px;
@@ -161,13 +170,13 @@ header {
     align-items: center;
     margin: 0 auto;
     padding-bottom: 53px;
-    @media screen and (max-width: 1000px) {
+    @media screen and (max-width: 960px) {
       flex-direction: column;
       align-items: center;
       padding-bottom: 48px;
     }
     .menu-item {
-      @media screen and (max-width: 1000px) {
+      @media screen and (max-width: 960px) {
         width: 100%;
         &:not(:first-of-type) {
           margin-top: 33px;
@@ -246,7 +255,7 @@ footer {
     font-size: 20px;
   }
 }
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 960px) {
   .pc {
     display: block;
   }
