--- a/TheLittleCafe/css/style.scss
+++ b/TheLittleCafe/css/style.scss
@@ -52,6 +52,7 @@ h1 {
     bottom: -15px;
     display: inline-block;
     width: 50px;
+    max-width: 100%;
     height: 2px;
     transform: translateX(-50%);
     background-color: #000;
@@ -87,6 +88,7 @@ h1 {
 }
 .btn {
   width: 250px;
+  max-width: 100%;
   height: 55px;
   background-color: #505050;
   border: solid 1px #000;
@@ -115,6 +117,7 @@ header {
   #header-title {
     margin: 15px 0;
     width: 174px;
+    max-width: 100%;
     height: 20px;
     line-height: 20px;
   }
@@ -178,11 +181,13 @@ header {
     .menu-item {
       @media screen and (max-width: 960px) {
         width: 100%;
+        max-width: 400px;
         &:not(:first-of-type) {
           margin-top: 33px;
         }
       }
-      width: 300px;
+      max-width: 300px;
+      width: 100%;
       h2 {
         font-size: 20px;
         font-weight: 400;
@@ -192,7 +197,7 @@ header {
         color: #505050;
         font-weight: 200;
         font-size: 15px;
-        width: 300px;
+        width: 100%;
         margin: 0 auto;
         text-align: center;
         line-height: 1.6;
@@ -207,7 +212,6 @@ header {
 #about {
   text-align: center;
   background-color: rgba(0, 0, 0, 0.05);
-  // margin: 0 auto;
   padding-bottom: 48px;
   h1 {
     margin: 35px 0 42px;
@@ -219,6 +223,7 @@ header {
     column-gap: 39px;
     .about-item-text {
       width: 471px;
+      max-width: 100%;
       h2 {
         font-size: 22px;
         font-weight: 400;
@@ -333,7 +338,8 @@ footer {
     .menu-contents {
       row-gap: 33px;
       .menu-item {
-        width: 315px;
+        width: 100%;
+        max-width: 315px;
         h2 {
           margin-top: 15px;
         }
